--- a/server/app/views/user_mailer/email_verification.html.erb
+++ b/server/app/views/user_mailer/email_verification.html.erb
@@ -19,11 +19,11 @@
           <tr>
             <td>
               <h1>Welcome to Skill Kraft!</h1>
-              <p>Dear [Username],</p>
+              <p>Dear <%= @user.username %>,</p>
               <p>Thank you for joining Skill Kraft! We're excited to have you on board.</p>
               <p>To get started, please click the button below to verify your email address:</p>
               <p style="text-align: center; margin-top: 30px;">
-                <a href="[VerificationLink]" style="background-color: #007bff; color: #ffffff; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Verify Email Address</a>
+                <a href="<%= @redirect_link %>" style="background-color: #007bff; color: #ffffff; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Verify Email Address</a>
               </p>
               <p>If you did not create an account on Skill Kraft, you can ignore this email.</p>
               <p>Thank you,<br> The Skill Kraft Team</p>
