--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque&display=swap');
+@import "trix/dist/trix.css";
 
 body {
   margin: 0px;
