--- a/server/app/views/user_mailer/email_verification.html.erb
+++ b/server/app/views/user_mailer/email_verification.html.erb
@@ -33,7 +33,7 @@
       </td>
     </tr>
     <tr>
-      <td bgcolor="#f4f4f4" style="padding: 20px 0; text-align: center;">
+      <td bgcoxlor="#f4f4f4" style="padding: 20px 0; text-align: center;">
         <p style="margin: 0;">&copy; 2024 Skill Kraft. All rights reserved.</p>
       </td>
     </tr>
