--- a/client/src/components/Carousel/ProfileCard.scss
+++ b/client/src/components/Carousel/ProfileCard.scss
@@ -22,7 +22,6 @@
   }
   
   .profile-card-details h2 {
-    padding: 10px;
     height: 60px;
     margin-bottom: 5px;
   }
@@ -49,3 +48,19 @@
     margin-right: 5px;
   }
   
+ 
+.bio {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.name {
+  display: -webkit-box;
+  -webkit-line-clamp: 2; 
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
