--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -8,7 +8,7 @@
   position: relative;
   flex-direction: column;
 }
-.profile-picture::before {
+.profile-picture.current::before {
   content: '  Edit \A Image';
   white-space: pre;
   position: absolute;
@@ -20,7 +20,7 @@
   transition: opacity 0.3s ease;
 }
 
-.profile-picture:hover::before {
+.profile-picture.current:hover::before {
   opacity: 1;
 }
 
